--- a/Leaflet-Part-1/index.html
+++ b/Leaflet-Part-1/index.html
@@ -28,7 +28,9 @@
   <!-- D3 JavaScript -->
   <script src="https://d3js.org/d3.v7.min.js"></script>
   <!-- Our JavaScript -->
+  <script src="static/js/apiKeys.js"></script>
   <script type="text/javascript" src="static/js/logic.js"></script>
+
 </body>
 
 </html>
